fixed bug of image overflowing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -396,3 +396,8 @@ button span {
     display: block;
 }
 
+#imagePreview {
+    width: 100%;
+    display: block;
+    max-width: 100%;
+}
